--- a/second.html
+++ b/second.html
@@ -4,25 +4,25 @@
 	<title>Home</title> 
     </head>
     <body>
-        <h1> Student Details </h1>
+        <h1>Student Details</h1>
         <table align = "center">
             <tr>
-                <td> Name </td>
-                <td> Address </td>
-                <td> Phone No </td>
-                <td> Email Id </td>
+                <td>Name</td>
+                <td>Address</td>
+                <td>Phone No</td>
+                <td>Email Id</td>
             </tr>
             <tr>
-                <td> Abhi </td>
-                <td> Address1 </td>
-                <td> 11111 </td>
-                <td> abihi@gmil.com </td>
+                <td>Abhishek</td>
+                <td>Address1</td>
+                <td>11111</td>
+                <td>abhishekhi@gmil.com</td>
             </tr>
             <tr>
-                <td> Satish </td>
-                <td> Address2 </td>
-                <td> 111234 </td>
-                <td> Satisg@abc.com </td>
+                <td>Satish</td>
+                <td>Address2</td>
+                <td>111234</td>
+                <td>Satishg@abc.com</td>
             </tr>
         </table>
     </body>
